added google analytics

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>UoM PC Clusters</title>
+    <script src="includes/analytics.js"></script>
     <link rel="stylesheet" href="includes/map_styles.css"></link>
     <link rel="icon" type="image/png" href="img/favicon.png" />
     <link rel="apple-touch-icon" href="img/apple-icon.png">
